# liuyao-divination

./: .gitignore  CHANGELOG.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml
data/: glossary.json  zhouyi.json
docs/: 易经六十四卦.md
docs/reports/: 01-是否旺己-地泽临之复.html  02-地月起源.html
examples/: 01-是否旺己-地泽临之复.json  02-地月起源.json
references/: 01-装卦排盘.md  02-用神取用.md  03-旺衰月日.md  04-动静暗破.md  05-进退神化.md  06-三合六合.md  07-墓库论.md  08-断卦步骤.md  09-四神与有力无力.md  10-卦变反伏.md  11-六十四卦判辞.md
skill/liuyao-divination/: SKILL.md
src/: paipan.py
src/liuyao/: __init__.py  board.py  data.py  format.py  wuxing.py
tests/: conftest.py  test_advanced.py  test_canonical_case.py
tools/: extract_panji.py  extract_zhouyi.py  generate_report.py  new_case.py
